# WyrmEngine

./: .clang-format  CONTRIBUTING.md  EULA.md  LICENCE.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/wyrm/engine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/engine/shaders/: diffuse.config  diffuse.frag  diffuse.vert  plane.frag  plane.vert  simple.frag  simple.vert
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/engine/: logger.h  wyrm_application.cpp  wyrm_application.h
app/src/main/cpp/engine/core/imgui/: imgui_renderer_helper.cpp  main_menu_bar.cpp  main_menu_bar.h
app/src/main/cpp/engine/core/imgui/input/: imgui_input_handler.cpp  scroll_handler.h
app/src/main/cpp/engine/core/renderer/: im_gui_android_helper.cpp  im_gui_android_helper.h  imgui_scene_data.cpp  imgui_scene_data.h
app/src/main/cpp/engine/ext/: serialization.h  toast.cpp  toast.h
app/src/main/cpp/engine/graphics/: test.cpp  test.h
app/src/main/cpp/engine/graphics/scene/: scene.cpp  scene.h
app/src/main/cpp/engine/graphics/scene/settings/: light_settings.cpp  light_settings.h
app/src/main/cpp/engine/graphics/shader/: shader.cpp  shader.h
app/src/main/cpp/engine/managers/: project_manager.cpp  project_manager.h
app/src/main/cpp/engine/utils/: util.cpp  util.h
app/src/main/java/com/wyrm/engine/: Constants.kt  MainActivity.kt  Time.java  WyrmApplication.java
app/src/main/java/com/wyrm/engine/activities/: CodeActivity.kt  EditorActivity.kt
app/src/main/java/com/wyrm/engine/adapters/: EditorTopBarMenuAdapter.kt
app/src/main/java/com/wyrm/engine/core/: Core.java
app/src/main/java/com/wyrm/engine/ext/: bitmap.kt  collections.kt  conditionals.kt  (+10 more)
app/src/main/res/drawable/: add.xml  add_photo_alternate.xml  android.xml  arrow_right_alt.xml  border_ripple_effect.xml  chevron_right.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  more_vert.xml  palette.xml  simple_border.xml
app/src/main/res/layout/: activity_code.xml  activity_editor.xml  activity_main.xml  activity_new_project.xml  activity_projects.xml  layout_color_picker.xml  layout_object_list.xml  layout_object_list_item.xml  layout_project_item.xml  layout_text_input.xml  layout_top_bar.xml  layout_top_bar_menu_item.xml  layout_wyrm_dialog.xml  layout_wyrm_popup_menu.xml  layout_wyrm_popup_menu_item.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  theme_overlays.xml  themes.xml
app/src/main/res/values-night/: colors.xml  theme_overlays.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  shortcuts.xml
app/src/test/java/com/wyrm/engine/: ExampleUnitTest.kt
filetree/: build.gradle
filetree/src/main/: AndroidManifest.xml
filetree/src/main/kotlin/com/zyron/filetree/: FileTree.kt
filetree/src/main/res/drawable/: ic_launcher_background.xml  item_background.xml  item_default_background.xml  item_pressed_background.xml  item_selected_background.xml  item_state_background.xml
filetree/src/main/res/drawable-v24/: ic_launcher_foreground.xml
filetree/src/main/res/layout/: recycler_view_item.xml
filetree/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
filetree/src/main/res/values/: colors.xml  strings.xml
filetree/src/main/res/values-night/: themes.xml
filetree/src/main/res/xml/: data_extraction_rules.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+73 files in other folders)
